Clear reloadable flag for workspace modules that happen to be dependencies of non-reloadable dependencies